--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 /* Add a black background color to the top navigation */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 * {
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
-
 
 .topnav {
   background-color: hsl(0, 0%, 100%);
@@ -45,13 +46,13 @@
   display: block;
   color: #000000;
   text-align: center;
-  padding: 25px 25px;
+  padding: 35px 20px;
   text-decoration: none;
   font-size: 14px;
   font-weight: 600;
   font-family: 'Roboto', sans-serif;
   margin-left: 5rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 
 }
 
@@ -72,6 +73,47 @@
 
   }
 }
+.logolink img{
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 2px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  margin-left:-1rem;
+  margin-top: -2rem;
+  width:19rem;
+
+}
+
+.logolink {
+  width: 10rem;
+  position:relative;
+  right:5rem;
+  height:5rem;
+ 
+
+}
+
+@media screen and (max-width: 900px) {
+  .logolink img {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 2px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  margin-left:-6rem;
+  margin-top: 4rem;
+  }
+}
+
 
 
 /* Change the color of links on hover */
@@ -104,14 +146,15 @@
   .topnav a.icon {
     float: right;
     display: block;
-    margin-right: 1rem;
+    margin-right: 1.4rem;
+    margin-top:1rem;
   }
  
 }
 
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .topnav.responsive {
     position: relative;
     
@@ -120,7 +163,7 @@
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
-    top: 5px;
+    top: 0px;
    
 
 
@@ -133,6 +176,13 @@
     margin-top: 1rem;
 
   }
+
+  .topnav.responsive img {
+   margin-left:-17.5rem;
+   margin-top:-3.5rem;
+   position:relative;
+
+  }
   .topnav a.active {
     background-color: #e2e2e2;
     color: rgb(0, 0, 0); 
@@ -141,17 +191,31 @@
 }
 
 
-.logo-position {
+/* .logo-position {
   float: left;
   width: 18rem;
-}
+} */
 
 @media screen and (max-width: 600px) {
-  .logo-position {
-    width: 17rem;
+  .logolink {
+    width: 10rem;
+    position:relative;
+    right:15rem;
+    height:5rem;
+   
 
   }
+  .logolink img{
+    width: 17rem;
+    position:absolute;
+    right:-17rem;
+    top:1rem;
+  }
+
+
 }
+
+
 
 /* .w3rcontainer{
     border: 1px solid 
@@ -204,20 +268,20 @@
  }
 
 
- @media screen and (max-width: 600px) {
+ @media screen and (max-width: 900px) {
   .mission-statement-shadow{
     background-color: #eceaea;
     width:95%;
     margin-left:0.6rem;
     font-size:30px;
-    height:75.5rem;
+    height:77.5rem;
     border-radius: 3%;
     position:relative;
-    margin-top:2rem;
+    margin-top:26rem;
    }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .mission-statement-shadow p{
     font-family: 'Roboto', sans-serif;
     margin-left:1rem;
@@ -271,14 +335,9 @@
 
 
 
- @media screen and (max-width: 600px) {
+ @media screen and (max-width: 900px) {
   .mission-statement-shadow img{
-    width:23.5rem;
-    left:-0.5rem;
-    position:relative;
-    height:23.9rem;
-    top:77.1rem;
-    border-radius: 5%;
+    display:none;
    }
   
 }
@@ -304,7 +363,7 @@
     width:95%;
     margin-left:0.6rem;
     font-size:30px;
-    height:66.5rem;
+    height:67.5rem;
     border-radius: 3%;
     position:relative;
     margin-top:2rem;
@@ -317,8 +376,8 @@
     font-family: 'Roboto', sans-serif;
     margin-left:1rem;
     font-size:20px;
-    margin-top:-3.5rem;
-    padding:25px;
+    margin-top:1.5rem;
+    padding:2px;
     
   }
   
@@ -346,7 +405,7 @@
     font-family: 'Roboto', sans-serif;
     margin-left:2.4rem;
     font-size:50px;
-    margin-top:-31rem;
+    margin-top:1rem;
     padding-top:1.5rem;;
     
   }
@@ -368,12 +427,7 @@
 
  @media screen and (max-width: 600px) {
   .about-us-shadow img{
-    width:23.5rem;
-    left:-0.5rem;
-    position:relative;
-    height:30.9rem;
-    top:67.1rem;
-    border-radius: 5%;
+   display:none
    }
   
 }
@@ -498,13 +552,13 @@ img {
 @media screen and (max-width: 600px) {
   .article-1-light-shadow {
     width: 22.5rem;
-    height: 32rem;
+    height: 34rem;
     color: #000000;
     position: relative;
     background-color: rgb(236, 229, 229);
     border-radius: 3%;
     margin-left: -2rem;
-    margin-top: -80rem;
+    margin-top:1rem;
   }
 
 }
@@ -531,11 +585,15 @@ img {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .article-heading-how-we-help-children {
-    margin-top: 104rem;
-    margin-left: 0.5rem;
-    font-size: x-large;
+    font-family: 'Roboto', sans-serif;
+    margin-left:2.4rem;
+    font-size:30px;
+    margin-top:-25rem;
+    padding-top:1.5rem;
+    margin-top:0.9rem;
+    z-index: 9;
   }
 
 }
@@ -629,7 +687,7 @@ img {
 @media screen and (max-width: 600px) {
   .article-2-light-shadow {
     width: 22.5rem;
-    height: 32rem;
+    height: 33rem;
     color: #000000;
     position: relative;
     background-color: rgb(224, 223, 223);
@@ -737,7 +795,7 @@ img {
 @media screen and (max-width: 600px) {
   .article-3-light-shadow {
     width: 22.5rem;
-    height: 34.9rem;
+    height: 31.9rem;
     color: #000000;
     position: relative;
     background-color: rgb(214, 212, 212);
@@ -1180,17 +1238,17 @@ footer {
   left: 0;
   background: #292929;
   height:35rem;
-  margin-top:2rem;
+  margin-top:1rem;
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:900px) {
   footer {
     width: 100%;
     position: relative;
     bottom: 0;
     left: 0;
     background: #1f1d1a;
-    height:47rem;
+    height:54rem;
     margin-top:3rem;
   }
   
@@ -1386,6 +1444,7 @@ textarea {
   flex-wrap: wrap;
   font-size: 30px;
   text-align: center;
+  font-family: sans-serif;
   
 
 }
@@ -1395,7 +1454,7 @@ textarea {
     flex-wrap: wrap;
     font-size: 30px;
     text-align: center;
-    margin-top:34rem;
+    margin-top:1rem;
 
   }
 }
@@ -1633,16 +1692,15 @@ width:5rem;
 }
 
 .also-in-this-section{
-  margin-top:45rem;
+  margin-top:55rem;
 }
 
 
 
 
 @media (max-width: 900px) {
- 
 .also-in-this-section{
-  margin-top:159rem;
+  margin-top:185rem;
 
 }
 }
@@ -2425,7 +2483,7 @@ width:5rem;
   
 } 
 .also-in-this-section-get-involved{
-  margin-top:39rem;
+  margin-top:50rem;
 }
 
 
@@ -2517,13 +2575,13 @@ width:5rem;
 
   
 .also-in-this-section-blanket{
-  margin-top:57rem;
+  margin-top:78rem;
 }
 
 @media (max-width: 900px) {
  
   .also-in-this-section-blanket{
-    margin-top:189.5rem;
+    margin-top:235.5rem;
   }
   }
   @media (max-width: 900px) {
@@ -2610,7 +2668,7 @@ width:5rem;
   @media (max-width: 900px) {
    
     .also-in-this-section-golf{
-      margin-top:240.5rem;
+      margin-top:295.5rem;
     }
     }
     @media (max-width: 900px) {
@@ -2969,4 +3027,293 @@ width:5rem;
             }
             }
           
+
+
+         /* ------------------------------------communities main heading */
+         .contact-main-heading{
+          font-size: 44px;
+          z-index: 8;
+          background-color: white;
+          word-wrap: break-word;
+          width: 250px;
+          border-radius: 5%;
+          position: absolute;
+          margin-left: -4rem;
+          font-weight: 700;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          margin-top: 18.5rem;
+        }
+        
+        @media (max-width: 900px) {
+          .contact-main-heading{
+            font-size: 42px;
+            z-index: 8;
+            background-color: white;
+            word-wrap: break-word;
+            width:205px;
+            border-radius: 5%;
+            position: absolute;
+            margin-left: -22.5rem;
+            font-weight: 700;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin-top:14rem;
+         }
+        } 
+        
+        
+        .contact-main-heading-2{
+          font-size: 40px;
+          z-index: 8;
+          background-color: rgb(255, 255, 255);
+          word-wrap: break-word;
+          width: 70px;
+          border-radius: 5%;
+          position: absolute;
+          margin-left:-4rem;
+          margin-top:11.1rem;
+          font-weight: 700;
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          margin-top:22rem;
+        }
+        
+        
+        @media (max-width: 900px) {
+          .contact-main-heading-2{
+            font-size: 42px;
+            z-index: 8;
+            background-color: white;
+            word-wrap: break-word;
+            width: 70px;
+            border-radius: 5%;
+            position: absolute;
+            margin-left: -22.5rem;
+            margin-top:16.9rem;
+            font-weight: 700;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            
+          }
+          
+        } 
       
+        .also-in-this-section-contact{
+          margin-top:47rem;
+        }
+        
+        @media (max-width: 900px) {
+         
+          .also-in-this-section-contact{
+            margin-top:162.5rem;
+          }
+          }
+          @media (max-width: 900px) {
+         
+            .also-in-this-section-contact h2{
+              margin-top:-3rem;
+              font-size: 30px;
+              position: absolute;
+              margin-left:1rem;
+            }
+            }
+          
+
+  .map{
+    position:relative;
+    left:2rem;
+    top:3rem;
+    width:80rem;
+    height:40rem;
+  }
+
+  @media (max-width: 900px) {
+         
+    .map{
+      position:relative;
+      left:0.1rem;
+      top:1rem;
+      width:23.1rem;
+      height:25.1rem;
+    }
+    }
+
+
+
+    .map-icon{
+      z-index: 8;
+      margin-top:-20.2rem;
+      position:absolute;
+      margin-left:41rem;
+    }
+
+    @media (max-width: 900px) {
+         
+      .map-icon{
+        z-index: 8;
+        margin-top:-14rem;
+        position:absolute;
+        margin-left:11rem;
+      }
+      }
+
+      /* ___________________________flex_______items_______ */
+
+.flex-margin-contact {
+  margin: 1rem;
+}
+
+
+.flex-container-contact {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+  
+
+}
+@media (max-width: 560px) {
+  .flex-container-contact {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    text-align: center;
+    margin-top:2rem;
+
+  }
+}
+.flex-container1-contact {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+  
+
+}
+@media (max-width: 560px) {
+  .flex-container1-contact {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    text-align: center;
+    margin-top:3rem;
+
+  }
+}
+.flex-item-left-contact {
+  background-color: #ffffff;
+  flex: 30%;
+  font-size: 17px;
+  padding:30px;
+
+}
+
+
+@media (max-width: 560px) {
+  .flex-item-left-contact {
+    background-color: #ffffff;
+   
+    flex: 25%;
+    font-size: 17px;
+  }
+}
+.flex-item-left-contact img {
+  background-color: #ffffff;
+  padding: 15px;
+  flex: 25%;
+width:5rem;
+}
+
+.flex-item-right-contact {
+  background-color: rgb(255, 255, 255);
+  font-size: 17px;
+  flex: 30%;
+  margin-top:1.1rem;
+  padding:30px;
+  
+}
+
+@media (max-width: 560px) {
+ 
+.flex-item-right-contact {
+  background-color: rgb(255, 255, 255);
+  flex: 25%;
+}
+}
+@media (max-width: 560px) {
+  .flex-item-right-contact img {
+    background-color: #ffffff;
+    padding: 15px;
+    flex: 25%;
+    width:5rem;
+  }
+}
+/* Responsive layout - makes a one column-layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .flex-item-right-contact,
+  .flex-item-left-contact {
+    flex: 100%;
+  }
+}
+
+@media (max-width: 900px) {
+  .flex-gap-contact{
+    height:100rem;
+  }
+  
+}
+
+.flex-gap-contact{
+  height:-1rem;
+}
+
+
+/* contact form */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+
+#logo-link{
+  margin-left:-10px;
+  margin-top:10px;
+}
+
+@media (max-width: 900px) {
+  .responsive-nav-gap{
+    height:5rem;
+  }
+  
+}
